[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/boss.png" type="Texture" id=1]
[ext_resource path="res://boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.06133, 7.12894 )

[sub_resource type="Animation" id=2]
resource_name = "bot_die"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "bot_tiro"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 92.2863, 10.0234 )

[node name="bot" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 3
hframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bot_die = SubResource( 2 )
anims/bot_jump = SubResource( 3 )
anims/bot_tiro = SubResource( 4 )
anims/bot_walk = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16.7929, 2.08839 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 9.56388, 0.45048 )
enabled = true
cast_to = Vector2( 0, 14 )

[node name="detetarplayer" type="Area2D" parent="."]
position = Vector2( 104.792, 0.265121 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="detetarplayer"]
shape = SubResource( 6 )

[node name="deadtimer" type="Timer" parent="."]
wait_time = 0.1

[node name="hurtime" type="Timer" parent="."]
wait_time = 0.1
[connection signal="body_entered" from="detetarplayer" to="." method="_on_detetarplayer_body_entered"]
[connection signal="timeout" from="deadtimer" to="." method="_on_deadtimer_timeout"]
[connection signal="timeout" from="hurtime" to="." method="_on_hurtime_timeout"]
